gcp_deployment/team10/yaml_files/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      serviceAccountName: default
      containers:
        - name: backend
          image: sofianeazirar/infrastructure-backend:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: cloudsql
              mountPath: /cloudsql

        - name: cloud-sql-proxy
          image: gcr.io/cloud-sql-connectors/cloud-sql-proxy:2.11.4
          args:
            - "--structured-logs"
            - "--port=5432"
            - "deploy-team-10:europe-central2:deploy-team-10-pg-instance"
          securityContext:
            runAsNonRoot: true
          volumeMounts:
            - name: secret-volume
              mountPath: /secrets
              readOnly: true

      imagePullSecrets:
        - name: gitlab-registry-secret
      volumes:
        - name: cloudsql
          emptyDir: {}
        - name: secret-volume
          secret:
            secretName: db-credentials
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: LoadBalancer
