gcp_deployment/team10/yaml_files/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      serviceAccountName: default
      containers:
        - name: frontend
          image: sofianeazirar/react-frontend-v2:latest
          ports:
            - containerPort: 3000
      imagePullSecrets:
      - name: gitlab-registry-secret
---
apiVersion: v1
kind: Service
metadata:
  name: react-frontend-service
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: LoadBalancer
