gcp_deployment/team10/yaml_files/prediction.yaml
# prediction.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prediction
  labels:
    app: prediction
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prediction
  template:
    metadata:
      labels:
        app: prediction
    spec:
      containers:
        - name: prediction
          image: thomasdwl/integratieproject:latest
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: prediction-service
spec:
  selector:
    app: prediction
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: LoadBalancer
